<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login"
    android:gravity="center|right"
    android:orientation="vertical"
    app:layout_anchorGravity="center"
    tools:context=".LogInActivity">


    <TextView
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center|end"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/logIn"
        android:textColor="#A9121111"
        android:textSize="24sp" />

    <EditText
        style="@style/EditTextLogin"
        android:id="@+id/emailEd"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/EditTextLogin"
        android:id="@+id/passwordEd"
        android:hint="@string/Password"
        />

    <Button
        android:id="@+id/login"
        style="@style/EditTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:inputType="textPersonName"
        android:text="@string/logIn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#68978E8E"
            android:gravity="center"
            android:text="@string/Makeanaccount"
            android:textColor="#B7000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reserve"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center|top|left"
            android:text="SignUp"
            android:textColor="#C4000000"
            android:onClick="toSignUp"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            app:strokeColor="#00FFFFFF" />

    </LinearLayout>

</LinearLayout>