<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32E6C7EC"
    tools:context=".beauty">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#00321818"
        android:text="@string/BeautyServices"
        android:textColor="#B4201E1E"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        style="@style/GridLayoutCardStyle"
        android:layout_below="@+id/title_view">

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout style="@style/LinearLayoutCardStyle">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nalis" />

                <TextView
                    style="@style/textViewCardStyle"
                    android:text="@string/NailsPart" />

                <Button
                    style="@style/buttonCardStyle"
                    android:onClick="nails"
                    android:text="@string/come" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_row="0"
            android:layout_column="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout style="@style/LinearLayoutCardStyle">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/hair" />

                <TextView
                    style="@style/textViewCardStyle"
                    android:text="@string/HairPart" />

                <Button
                    style="@style/buttonCardStyle"
                    android:onClick="hair"
                    android:text="@string/come" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout style="@style/LinearLayoutCardStyle">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/makeup" />

                <TextView
                    style="@style/textViewCardStyle"
                    android:text="@string/MakeUpPart"

                    />

                <Button
                    style="@style/buttonCardStyle"
                    android:onClick="makeup"
                    android:text="@string/come" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_row="1"
            android:layout_column="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout style="@style/LinearLayoutCardStyle">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/skin" />

                <TextView
                    style="@style/textViewCardStyle"
                    android:text="@string/SkinCarePart" />

                <Button
                    style="@style/buttonCardStyle"
                    android:onClick="skincare"
                    android:text="@string/come" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

</RelativeLayout>