<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".CheckInOut">

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="#66FCFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/CheckINOutText"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/checkIn" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date1Text"
                style="@style/CheckINOutText"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/calendarbtn1"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_calendar_month_24"
                android:backgroundTint="#5CAAA3"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            style="@style/CheckINOutText"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/checkOut" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateText2"
                style="@style/CheckINOutText"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/calendarbtn2"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_calendar_month_24"
                android:backgroundTint="#5CAAA3"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/cNumtext"
            style="@style/CheckINOutText"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/CardNum" />

        <LinearLayout
            android:id="@+id/cNumLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cNum"
                style="@style/CheckINOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/cvcText"
            style="@style/CheckINOutText"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/cardCode" />

        <LinearLayout
            android:id="@+id/cvcLayout"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cvc"
                style="@style/CheckINOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/nameText"
            style="@style/CheckINOutText"
            android:layout_width="163dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <Button
            android:id="@+id/nextbutton"
            style="@style/CheckINOutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/next" />

    </LinearLayout>
</LinearLayout>